# RAGWebApp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settting.json
.github/workflows/: backend.yaml  ci.yaml  docker.yaml  frontend.yaml
backend/api/: app.py  documents.py  messages.py  schemas.py  state.py
backend/core/: chunking.py  config.py  database.py  ingest.py  ingestion_worker.py  logging.py  models.py  reranker.py  vector_store.py
backend/core/llms/: __init__.py  base.py  groq.py  llm_schema.py  openrouter.py  prompt.py  query_schema.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  SourceChunks.tsx  StreamingBubble.tsx
frontend/src/components/documents/: DocumentItem.tsx  DocumentList.tsx  UploadZone.tsx
frontend/src/components/layout/: AppShell.tsx  DocumentDrawer.tsx  SessionSidebar.tsx
frontend/src/components/ui/: Badge.tsx  Collapsible.tsx  ErrorBanner.tsx
frontend/src/context/: SessionContext.tsx
frontend/src/hooks/: useDocuments.ts  useMessages.ts
frontend/src/lib/: api.ts  sse.ts
frontend/src/pages/: ChatPage.tsx  RedirectPage.tsx
frontend/src/test/: SessionContext.test.tsx  api.test.ts  setup.ts  sse.test.ts  useDocuments.test.tsx  useMessages.test.tsx
frontend/src/types/: api.ts
nginx/: nginx.conf
postgres/: Dockerfile  init.sql  postgresql.conf
postgres/certs/: server.crt  server.key
qdrant/: Dockerfile  qdrant.yaml
tests/: conftest.py  test_backend_core_chunking.py  test_backend_core_ingest.py  test_backend_core_vectorstore.py  test_verify_file_integrity.py
tests/api/: conftest.py  test_documents.py  test_health.py  test_messages.py  test_rate_limiting.py
tests/core/: conftest.py  test_chunking.py  test_ingest.py  test_ingestion_worker.py  test_models.py  test_vector_store.py  test_verify_file_integrity.py
tests/core/llms/: test_factory.py  test_groq.py  test_openrouter.py  test_prompt.py
tests/fixtures/ingest/: test.md
