[project]
name = "ragwebapp"
version = "0.1.0"
description = "A basic RAG web-application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi-utils[session]>=0.8.0",
    "fastapi[standard]>=0.136.3",
    "langchain-core>=1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.5.1",
    "tenacity>=9.1.4",
    "typing-inspect>=0.9.0",
    "werkzeug>=3.1.8",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.basedpyright]
exclude = [
   ".venv",
    "**/__pycache__",
    "htmlcov",
    "test-results",
    "tests/fixtures",
    "README.md",
    "**/*.pyc"
]

[tool.black]
target-version = ["py313"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=80 --junitxml=test-results/junit.xml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
